# wake

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  USAGE.md  pyproject.toml  wakefile
assets/: wakefile
requirements/: requirements-dev.in  requirements-dev.txt  requirements.txt
src/wake/: cli.py  engine.py  pars.py  parser.py  tokenizer.py  typedef.py
src/win_make/: cli.py  engine.py  parser.py
tests/: conftest.py  test_cli.py  test_exec.py  test_parser.py  test_tokenizer.py
